# dbcomp

./: Cargo.toml  LICENSE  README.md
C#/: DbInfo.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormSelect.Designer.cs  FormSelect.cs  Program.cs  TableInfo.cs  dbComp.csproj  dbComp.sln
Go/: dbcomp.go  dbinfo.go  tableinfo.go
Java/: pom.xml
Java/src/main/java/dbComp/: App.java  DbInfo.java  TableInfo.java
NodeJs/: dbcomp.mjs  dbinfo.mjs  package.json  tableinfo.mjs
Python/: dbcomp.py  dbinfo.py  tableinfo.py
Rust/src/: info.rs  main.rs
Rust/src/info/: dbinfo.rs  tableinfo.rs
TestData/: SampleDb.s3db  SampleDb1.s3db
src/: main.rs
src/info/: dbinfo.rs  tableinfo.rs
